# tldr-summarizer-bot

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: digest.yml
data/: state.json
docs/: index.html  manifest.webmanifest  showcase.html  sw.js
docs/data/: 2026-07-08.json  2026-07-09.json  2026-07-10.json  2026-07-13.json  2026-07-14.json  2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json  2026-07-24.json  data.js  index.json
launchd/: com.pinardy.tech-news-summarizer.plist
src/tech_news_summarizer/: __init__.py  archive.py  config.py  fetcher.py  main.py  state.py  summarizer.py  telegram.py
worker/: package-lock.json  package.json  wrangler.toml
worker/src/: ai.ts  commands.ts  index.ts  telegram.ts  tldr.ts
